Prevent nav link cutoff

--- a/assets/styles/_nav.scss
+++ b/assets/styles/_nav.scss
@@ -35,6 +35,7 @@ $navbar-border-height: 6px;
       color: $dark-blue;
       font-size: 1.3em;
       margin: 0;
+      white-space: nowrap;
 
       &:hover,
       &:active,
